# heekscad

./: CMakeLists.txt  INSTALL_MACOSX.sh
interface/: Binding.cpp  Binding.h  CMakeLists.txt  DomainObject.cpp  DomainObject.h  DoubleInput.cpp  DoubleInput.h  EnumFactory.h  Geom.cpp  Geom.h  GripData.h  GripperTypes.cpp  GripperTypes.h  HDialogs.cpp  HeeksCADInterface.cpp  HeeksCADInterface.h  HeeksColor.cpp  HeeksColor.h  HeeksConfig.cpp  HeeksConfig.h  HeeksObj.cpp  HeeksObj.h  HeeksObjDlg.cpp  HeeksObjDlg.h  IdNamedObj.cpp  IdNamedObj.h  IdNamedObjList.cpp  IdNamedObjList.h  InputMode.h  MutableObject.h  NiceTextCtrl.cpp  NiceTextCtrl.h  ObjList.cpp  ObjList.h  ObjTypes.cpp  ObjTypes.h  PictureFrame.cpp  PictureFrame.h  Property.cpp  Property.h  (+9 more)
src/: AutoSave.cpp  BentleyOttmann.cpp  CMakeLists.txt  Cone.cpp  Cone.h  ConversionTools.cpp  ConversionTools.h  CoordinateSystem.cpp  CoordinateSystem.h  CorrelationTool.cpp  CorrelationTool.h  Cuboid.cpp  Cuboid.h  CxfFont.cpp  CxfFont.h  Cylinder.cpp  Cylinder.h  Dexel.cpp  Dexel.h  DexelContour.cpp  DexelContour.h  DexelGrid.cpp  DexelGrid.h  DexelSolid.cpp  DexelSolid.h  DigitizeMode.cpp  DigitizeMode.h  DigitizedPoint.cpp  DimensionDrawing.cpp  DimensionDrawing.h  Drawing.cpp  Drawing.h  DynamicSolid.h  Edge.cpp  Edge.h  EndedObject.cpp  EndedObject.h  Face.cpp  Face.h  FaceTools.cpp  (+130 more)
